# cmt_statistics_tool

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.github/workflows/: test.yaml
cmt_statistics_tool/: helper.py  main.py
cmt_statistics_tool/insert/: metareviews.py  papers.py  people.py  reviews.py  submission_revision_mapping.py
cmt_statistics_tool/sql/: CREATE_revision.sql  CREATE_revision_metareview.sql  CREATE_revision_people.sql  CREATE_revision_review.sql  README.md
cmt_statistics_tool/statistics/: __init__.py  s01_01.py  s01_02.py  s01_03.py  s01_04.py  s02_01.py  s02_02.py  s02_03.py  s02_04.py  s03_01.py  s03_02.py  s03_03.py  s03_04.py
cmt_statistics_tool/tables/: __init__.py  metareview.py  paper.py  people.py  review.py  seniormetareview.py
cmt_statistics_tool/utility/: External Reviewers.ipynb  get_accepted.py  get_changed_titles_or_authors.py  get_people_counts_by_number_of_papers_and_status.py  get_submissions_needing_a_revision.py  suggest_submission_revision_mapping.py
tests/: test_vldb.py
vldb/: helper.py  main.py
vldb/insert/: metareviews.py  papers.py  people.py  reviews.py  submission_revision_mapping.py
vldb/sql/: CREATE_people.sql  CREATE_revision_seniormetareview.sql  CREATE_submission.sql  CREATE_submission_metareview.sql  CREATE_submission_people.sql  CREATE_submission_review.sql  CREATE_submission_seniormetareview.sql
vldb/statistics/: __init__.py  s01_01.py  s01_02.py  s01_03.py  s01_04.py  s02_01.py  s02_02.py  s02_03.py  s02_04.py  s03_01.py  s03_02.py  s03_03.py  s03_04.py
(+11 files in other folders)
